log
Thu 21 Mar 2024 04:10:53 PM UTC: 
 tests:  0|5
total_score: 0/70
89a008d
Thu 21 Mar 2024 04:19:12 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
84fcc55
Thu 21 Mar 2024 04:19:51 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
7ba28ae
Thu 21 Mar 2024 04:20:57 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:17: error: expected expression before ‘List’
   51 |   imprime_lista(List *L);
      |                 ^~~~
Compilation failed
10c6f76
Thu 21 Mar 2024 04:22:37 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b287f3e
Thu 21 Mar 2024 04:22:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1456b7e
Thu 21 Mar 2024 04:26:42 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a210cf6
Thu 21 Mar 2024 04:43:38 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:17: error: comparison between pointer and integer [-Werror]
   84 |     if(elemento == elem)
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
0f59730
Thu 21 Mar 2024 04:45:20 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
111889c
Thu 21 Mar 2024 04:49:24 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
8174e17
Thu 21 Mar 2024 05:28:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
5116282
Thu 21 Mar 2024 08:40:07 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:102:17: error: comparison between pointer and integer [-Werror]
  102 |   while(top(P1) != -1){
      |                 ^~
exercises.c:100:10: error: unused variable ‘PilaAux’ [-Werror=unused-variable]
  100 |   Stack* PilaAux = create_stack();
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ab18580
